# celestial-bootstrap-next

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
src/: config.rs  java.rs  main.rs  utils.rs
src/building/: gradle.rs
src/java/: download.rs  resolving.rs
src/utils/: download.rs  git.rs  logging.rs
