[package]
name = "celestial-bootstrap-next"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["stream"] }
shlex = "1.3.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "process", "macros"] }
which = "8.0.0"
thiserror = "1.0"
once_cell = "1.18"
regex = "1.11.1"
tokio-stream = { version = "0.1.17", features = ["fs"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.15", features = ["compat"] }
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
async_zip = { version = "0.0.17", features = ["tokio"] }
hex = "0.4.3"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.20.0"
